Tue May  6 15:52:42 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Makefile.CosLoadBalancing (ACE_SHLIBS):
	* orbsvcs/orbsvcs/Makefile.PortableGroup (ACE_SHLIBS):

	  Corrected library link order.

Tue May  6 16:04:33 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ChangeLog_ref:

          Removed this file, which somehow got added and committed
          by accident.

Tue May  6 13:19:02 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/PortableGroup/PG_GenericFactory.h
	  (process_criteria):

	  Pass PortableGroup::FactoriesValue parameter by reference
	  instead of by reference to pointer.  Part of a fix that corrects
	  some infrastructure controlled membership problems.

	* orbsvcs/orbsvcs/PortableGroup/PG_GenericFactory.cpp
	  (create_object):

	  Declare the PortableGroup::FactoriesValue variable on the
	  stack.  Addresses some memory management/ownership issues for
	  the infrastructure controlled membership case.

	  (process_criteria):

	  Deep copy the FactoryInfos property to the
	  PortableGroup::FactoriesValue parameter passed by reference
	  instead of shallow copying it.  Fixes a segmentation fault
	  caused by attempting to access memory owned by an Any that is
	  destroyed when leaving the scope of this method.

Tue May  6 13:02:07 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Object.h:

	  Fixed "fuzz" error in Doxygen documentation for this file.

Tue May  6 12:56:27 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/PSS/PSDL_Interface_Visitor.cpp:
	* orbsvcs/orbsvcs/Naming/Naming_Utils.cpp:
	* orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:
	* orbsvcs/orbsvcs/Sched/DynSched.cpp:
	* orbsvcs/orbsvcs/Sched/Reconfig_Scheduler_T.cpp:

	  More ptr_arith_t -> ptrdiff_t changes.

Tue May  6 10:42:50 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAOACE.dsw:

          Put back some project dependencies that inadvertently got lost as